# string

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  string.c  string.h
Doc/: Doxyfile
lib/: CMakeLists.txt  string.c
lib/base/: base.h
lib/include/: string.h
lib/slice/: slice.c  slice.h
src/string/: CMakeLists.txt  string.c  string.h
test/: main.c
tests/: CMakeLists.txt  main.cpp
